p14247 Draw.IO check HTTP response status. Gradle version 7.3.2. Simplified Maven publish. Mark current fragment and ToC subitems.